<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/videoDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundColour"
    android:orientation="vertical"
    tools:context=".NavigationHub">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:foregroundGravity="center_horizontal"
        app:srcCompat="@drawable/english_logo_coco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="200dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Button
            android:id="@+id/orderButton"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingTop="50dp"
            android:text="@string/orderBtn"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/viewHistory"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/viewOrderBtn"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/viewYoutube"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/viewYoutubeBtn"
            app:backgroundTint="@null" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>