<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/videoDescription"
    style="@style/BackgroundColour"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ViewOrders">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/orderItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Item Name"
            android:textColor="@color/TextColour"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/orderItem"
            app:layout_constraintTop_toTopOf="@+id/orderItem" />

        <TextView
            android:id="@+id/itemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="Item category"
            android:textColor="@color/TextColour"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/orderItem"
            app:layout_constraintLeft_toLeftOf="@+id/orderItem" />


        <Button
            android:id="@+id/incrementItemNum"
            android:layout_width="30dp"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_filled_background"
            app:backgroundTint="@null"
            android:clickable="true"
            android:padding="10sp"
            android:text="@string/incrementItemNum"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/TextColour"
            app:layout_constraintRight_toLeftOf="@+id/itemNum"
            app:layout_constraintTop_toTopOf="@+id/orderItem" />

        <TextView
            android:id="@+id/itemNum"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_unfilled_background"
            android:padding="10sp"
            android:text="1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintRight_toLeftOf="@+id/decrementItemNum"
            app:layout_constraintTop_toTopOf="@+id/orderItem" />

        <Button
            android:id="@+id/decrementItemNum"
            android:layout_width="30dp"
            android:layout_height="50sp"
            android:background="@drawable/rectangle_filled_background"
            android:clickable="true"
            android:padding="10sp"
            android:text="@string/decrementItemNum"
            android:textSize="20sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            android:textColor="@color/TextColour"
            app:layout_constraintRight_toRightOf="@+id/orderItem"
            app:layout_constraintTop_toTopOf="@+id/orderItem" />

        <TextView
            android:id="@+id/itemCostTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderCostTitle"
            app:layout_constraintRight_toLeftOf="@+id/itemCost"
            app:layout_constraintTop_toBottomOf="@+id/incrementItemNum" />

        <TextView
            android:id="@+id/itemCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$00.00"
            app:layout_constraintLeft_toRightOf="@+id/incrementItemNum"
            app:layout_constraintTop_toBottomOf="@+id/incrementItemNum"
            app:layout_constraintEnd_toEndOf="@+id/orderItem"
            android:textColor="@color/TextColour"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>